Fix : FindBugs Issues